Updates to driver structure, better ResultList mapping functionality for stream() and collect(), general code cleanup.